<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".SalaryActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
        android:background="#f5f5f5"
        >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="#FFFFFF"
        />
   <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rounded_border_cards_white"
    android:layout_marginTop="8dp"
    android:layout_marginRight="6dp"
    android:layout_marginLeft="6dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write_your_upc_codes_here"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="16sp"
        android:textAllCaps="true"
         />
    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="8dp"/>
</LinearLayout>
       <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
           >
    <EditText
        android:id="@+id/editText_write_codes"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:textSize="14sp"
        android:hint="@string/codes"
        android:inputType="textCapCharacters"
        android:layout_margin="8dp"
        />
           <EditText
               android:id="@+id/editText_add_percent"
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="0.1"
               android:textSize="14sp"
               android:hint="@string/percent"
               android:layout_margin="8dp"
               android:inputType="number"
               />

    </LinearLayout>
    <EditText
        android:id="@+id/editText_add_services"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:hint="@string/services"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:inputType="textCapCharacters"
        android:layout_marginBottom="18dp"
        />

</LinearLayout>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:background="@drawable/rounded_border_cards_white"
          android:layout_marginTop="8dp"
          android:layout_marginRight="6dp"
          android:layout_marginLeft="6dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="16sp"
        android:textAllCaps="true"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"

        />
    <TextView
        android:id="@+id/result_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="14sp"
        />
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="#e0e0e0"
          android:layout_marginLeft="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="54dp">
      </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:onClick="calculate"
            android:text="@string/calculate"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/ripple_effect"

            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete"
            android:onClick="deleteAllText"
            android:layout_margin="8dp"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/ripple_effect"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save_information"
            android:onClick="saveInformationIntoDb"
            android:layout_margin="8dp"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/ripple_effect"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save"
            android:onClick="saveInformation"
            android:layout_margin="8dp"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/ripple_effect"
            />
    </LinearLayout>
    </LinearLayout>
</LinearLayout>
    </ScrollView>
</LinearLayout>


