<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.android.ukod.MainActivity"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_container"
    android:background="#f5f5f5">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_custom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextColor="#FFFFFF"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_border_cards_white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/salary"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/ripple_effect"
            android:onClick="linkSalary"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_border_cards_white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/rfc"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/ripple_effect"
            android:onClick="linkRfc"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_border_cards_white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/modem_login"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle"
            android:background="@drawable/ripple_effect"
            android:onClick="linkProvisioning"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_border_cards_white"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="8dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/refueling"
            android:textSize="14sp"
            android:background="@drawable/ripple_effect"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="linkRefueling" />
    </LinearLayout>

</LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>
    </android.support.v4.widget.DrawerLayout>